ya tiene margen

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body>       
         <header>
+            <div class="container">
             <div class="logo">
                 <img src="image/logo2.png" alt="">
             </div>
@@ -19,8 +20,10 @@
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
-        </header>        
+            </div>
+        </header>                
         <section class="hero clearfix">
+            <div class="container">
             <div class="col-1">
                 <h2>Beautiful High Converting Landing Page</h2>
                 <p>Backyard is a modern and customizabe landing page template designed to increase conversion of your product. Backyard is flexible to suit any kind of your business. Try now and join with our happy customers!</p>
@@ -31,7 +34,12 @@
                 <p><input type="text" placeholder="Email"></p>
                 <button type="submit">SUBSCRIBE</button>
             </form> 
-        </section>
-        <footer><p>All Rights Reserved © nK</p></footer>
+            </div>
+        </section>        
+        <footer>
+            <div class="container">
+                <p>All Rights Reserved © nK</p>
+            </div>
+        </footer>      
 </body>
 </html>
