diseño para movil terminado

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h3>GET STATED</h3>
                 <p><input type="text" placeholder="Tu Nombre"></p>
                 <p><input type="text" placeholder="Email"></p>
-                <button type="submit">SUBSCRIBE</button>
+               <p><button type="submit">SUBSCRIBE</button></p>  
             </form> 
             </div>
         </section>        
